Boilerplate: fix swaggo anotation
